--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.6",
+        "maatwebsite/excel": "^3.1",
         "riverskies/laravel-mobile-detect": "^1.3",
         "spatie/laravel-backup": "^9.2",
         "vormkracht10/laravel-google-analytics-v4": "^1.2"
